# SynFlict

./: .gitignore  README.md  package.json  pnpm-lock.yaml  prompt_plan.md  spec.md  turbo.json
Projects/Downloader/: GUI_in_html.html  README.md  ai_prompt.md  comprehensive_fix.py  config.ini  direct_praw_test.py  download_worker.py  extensive_project_handoff.md  fix_gui_script.py  fix_modern_gui.py  fix_script.py  fixed_subreddit_downloader.py  gui.py  gui_backend.py  history_manager.py  mock_downloader.py  modern_gui.py  modern_gui.py.bak  modern_gui.py.bak.1748426064  musthave.md  notification_manager.py  preview_manager.py  project_handoff.md  prompt_plan.md  pyproject.toml  queue_manager.py  restore_gui.py  scheduler_manager.py  search_worker.py  settings_manager.py  shortcut_manager.py  spec.md  stats_manager.py  subreddit_download.py  test_grabber.py  test_reddit_auth.py  theme.py  ui_design_prompt.md  verify_credentials.py
Projects/Downloader/grabber/: __init__.py  __main__.py  auth.py  cli.py  config.py  database.py  download_manager.py  downloader.py  global_search.py  manifest.py  ratelimit.py  reddit.py  search.py  subreddit_downloader.py  sync.py  test_mode.py
Projects/Downloader/test_downloads/: test.db
Projects/Downloader/tests/: test_auth.py  test_cli.py  test_config.py  test_database.py  test_downloader.py  test_manifest.py  test_nsfw_filter.py  test_ratelimit.py  test_ratelimit_simple.py  test_reddit.py  test_resumable.py  test_search.py  test_search_simple.py  test_simple_resume.py  test_skeleton.py  test_subreddit_iterator.py
(+190 files in other folders)
