[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reddit-grabber"
version = "0.1.0"
description = "A utility for downloading images and videos from Reddit"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Grabber Team", email = "info@example.com"},
]
dependencies = [
    "typer>=0.7.0",
    "praw>=7.7.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "rich>=13.4.2",
    "textual>=0.27.0",
    "asyncio>=3.4.3",
    "aiohttp>=3.8.5",
    "yt-dlp>=2023.0.0",
]

[project.optional-dependencies]
gui = ["PySide6>=6.5.0"]
dev = [
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
    "freezegun>=1.2.2",
]

[project.scripts]
grabber = "grabber.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
